--- a/homepage_2.1.1.html
+++ b/homepage_2.1.1.html
@@ -329,7 +329,7 @@
         }
       </script>
 </body>
-<script>
+<!-- <script>
 var isNS = (navigator.appName == "Netscape") ? 1 : 0;
 if(navigator.appName == "Netscape") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
 function mischandler(){
@@ -343,5 +343,5 @@ if((eventbutton==2)||(eventbutton==3)) return false;
 document.oncontextmenu = mischandler;
 document.onmousedown = mousehandler;
 document.onmouseup = mousehandler;
-</script>
+</script> -->
 </html>
