--- a/aboutpage_2.1.1.html
+++ b/aboutpage_2.1.1.html
@@ -8,10 +8,10 @@
       shrink-to-fit=no">
 
   <!--Boostrap CSS-->
-  <link type="text/css" rel="stylesheet" href="C:/Users/Admin/Documents/GitHub_sites/hackedtricks.github.io/css/bootstrap-grid.min.css">
-  <link type="text/css" rel="stylesheet" href="C:/Users/Admin/Documents/GitHub_sites/hackedtricks.github.io/css/bootstrap.min.css">
+  <link type="text/css" rel="stylesheet" href="https://mani364.github.io/hackedtricks.github.io/css/bootstrap-grid.min.css">
+  <link type="text/css" rel="stylesheet" href="https://mani364.github.io/hackedtricks.github.io/css/bootstrap.min.css">
 
-  <link type="text/css" rel="stylesheet" href="C:/Users/Admin/Documents/GitHub_sites/hackedtricks.github.io/home_design_2.1.1.css">
+  <link type="text/css" rel="stylesheet" href="https://mani364.github.io/hackedtricks.github.io/home_design_2.1.1.css">
 
   <link type="text/css" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
@@ -24,7 +24,7 @@
   <div class="loader"></div>
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\homepage_2.1.1.html"><img
+      <a class="navbar-brand" href="https://mani364.github.io/hackedtricks.github.io/homepage_2.1.1.html"><img
           src="https://xhzqxa.am.files.1drv.com/y4mlzNH3awGe1wEbaRhiCsXt2uUDhi99JbuYIqjvRvvvia-McQbPwtMXLtIfP1d5NRJyDmczcKpuT70S7tkXbXR0OB88R8YNzOazmpwAUxAF3O5wSkdGD4dl0BQB_ViMx85NXoecdIUkrRrru4oRC4Nil3AOGwrZASoYtZNZ4boNsl50jqFemoImpWGkO7TbozkOqvhPxmEEgJI-bVc4K03KA?width=32&height=32&cropmode=none"
           width="30" height="30" class="d-inline-block"> HackedTricks</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\homepage_2.1.1.html">Home</a>
+            <a class="nav-link" href="https://mani364.github.io/hackedtricks.github.io/homepage_2.1.1.html">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\aboutpage_2.1.1.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="https://mani364.github.io/hackedtricks.github.io/aboutpage_2.1.1.html">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\project.html">Experience</a>
+            <a class="nav-link" href="https://mani364.github.io/hackedtricks.github.io/project.html">Experience</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -49,7 +49,7 @@
 
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="javascript:Alertit()">Blogs</a>
-              <a class="dropdown-item" href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\contactus.html">Contact</a>
+              <a class="dropdown-item" href="https://mani364.github.io/hackedtricks.github.io/contactus.html">Contact</a>
             </div>
           </li>
         </ul>
@@ -380,15 +380,15 @@
 
       <div class="footer-left">
         <p class="footer-links">
-          <a href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\homepage_2.1.1.html">Home</a>
+          <a href="https://mani364.github.io/hackedtricks.github.io/homepage_2.1.1.html">Home</a>
 
-          <a href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\aboutpage_2.1.1.html">About</a>
+          <a href="https://mani364.github.io/hackedtricks.github.io/aboutpage_2.1.1.html">About</a>
 
-          <a href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\project.html">Experience</a>
+          <a href="https://mani364.github.io/hackedtricks.github.io/project.html">Experience</a>
 
           <a href="#">Blogs</a>
 
-          <a href="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\contactus.html">Contact</a>
+          <a href="https://mani364.github.io/hackedtricks.github.io/contactus.html">Contact</a>
 
         </p>
         <p>&nbsp; &nbsp;HackedTricks &copy; 2020</p>
@@ -409,12 +409,12 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
   </script>
 
-  <script type="text/javascript" src="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\js\bootstrap.min.js">
+  <script type="text/javascript" src="https://mani364.github.io/hackedtricks.github.io/js/bootstrap.min.js">
   </script>
 
   <canvas id="particles"> </canvas>
 
-  <script src="C:\Users\Admin\Documents\GitHub_sites\hackedtricks.github.io\ab-particles-master\js\ab-particles.js" defer>
+  <script src="https://mani364.github.io/hackedtricks.github.io/ab-particles-master/js/ab-particles.js" defer>
   </script>
 
   <script type="text/javascript">
