--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
       </div>
     </nav>
     <div class="card">
-      <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
+      <iframe sandbox="allow-forms allow-popups allow-pointer-lock allow-same-origin allow-scripts"
               src="https://onedrive.live.com/embed?cid=442D635CE02D543B&resid=442D635CE02D543B%212048&authkey=ABGXCS8zFYiMgBE" width="100%" height="320" frameborder="0">
       </iframe>
       <div class="card-body">
