--- a/contactus.html
+++ b/contactus.html
@@ -87,12 +87,12 @@
       </li>
     </a>
 
-    <a href="#">
+    <a href="https://www.linkedin.com/in/shrinath-narendra-vaya-3316b5100/">
       <li class="fa fa-linkedin">
       </li>
     </a>
 
-    <a href="#">
+    <a href="https://github.com/mani364">
       <li class="fa fa-github">
       </li>
     </a>
