--- a/project.html
+++ b/project.html
@@ -53,8 +53,7 @@
       </div>
     </nav>
     <div class="card">
-      <iframe sandbox="allow-forms allow-popups allow-pointer-lock allow-same-origin allow-scripts"
-              src="https://onedrive.live.com/embed?cid=442D635CE02D543B&resid=442D635CE02D543B%212048&authkey=ABGXCS8zFYiMgBE" width="100%" height="320" frameborder="0" scrolling="no" allowfullscreen>
+      <iframe src="https://onedrive.live.com/embed?cid=442D635CE02D543B&resid=442D635CE02D543B%212048&authkey=ABGXCS8zFYiMgBE" width="100%" height="320" frameborder="0" scrolling="no" allowfullscreen>
       </iframe>
       <div class="card-body">
         <h5 class="card-title">Payment Collection&nbsp;(2019)</h5>
