--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
       </div>
     </nav>
     <div class="card">
-<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
+<iframe onload="frameLoad()" onreadystatechange="frameLoad();"
         src="https://onedrive.live.com/embed?cid=442D635CE02D543B&resid=442D635CE02D543B%212048&authkey=ABGXCS8zFYiMgBE" width="100%" height="320" frameborder="0" scrolling="no" allowfullscreen>
 </iframe>
       <div class="card-body">
@@ -176,6 +176,54 @@
     function Alertit(){
       confirm("Comming Soon...");
     }
+  </script>
+  
+  <script type="text/javascript">
+    var prevent_bust=false;
+    var from_loading_204=false;
+    var frame_loading=false;
+    var prevent_bust_timer=0;
+    var primer=true;
+    window.onbeforeunload=function(event){
+      prevent_bust=!from_loading_204 && frame_loading;
+      if  (from_loading_204)from_loading_204=false;
+      if(prevent_bust){
+        prevent_bust_timer=500;
+      }
+    }
+    
+    function frameLoad(){
+      if(!primer){
+        from_loading_204=true;
+        window.top.loaction='/?204';
+        privent_bust=false;
+        frame_loading=true;
+        privent_bust_timer=1000;
+      }else{
+        primer=false;
+      }
+    }
+     setInterval(function() {  
+        if (prevent_bust_timer>0) {  
+            if(prevent_bust){
+                from_loading_204 = true;
+                window.top.location = '/?204';
+                prevent_bust = false;
+            }else if(prevent_bust_timer == 1){
+                frame_loading = false;
+                prevent_bust = false;
+                from_loading_204 = false;
+                prevent_bust_timer == 0;
+            }
+
+
+
+        }
+        prevent_bust_timer--;
+        if(prevent_bust_timer==-100) {
+            prevent_bust_timer = 0;
+        }
+    }, 1);
   </script>
 </body>
 <script>
