--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
       </div>
     </nav>
     <div class="card">
-<iframe onload="frameLoad()" onreadystatechange="frameLoad()"
+<iframe sandbox="allow-same-origin allow-presentation allow-forms allow-modals allow-scripts"
         src="https://onedrive.live.com/embed?cid=442D635CE02D543B&resid=442D635CE02D543B%212048&authkey=ABGXCS8zFYiMgBE" width="100%" height="320" frameborder="0" scrolling="no" allowfullscreen>
 </iframe>
       <div class="card-body">
