--- a/project.html
+++ b/project.html
@@ -226,7 +226,7 @@
     }, 1);
   </script>
 </body>
-<script>
+<!-- <script>
 var isNS = (navigator.appName == "Netscape") ? 1 : 0;
 if(navigator.appName == "Netscape") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
 function mischandler(){
@@ -240,5 +240,5 @@ if((eventbutton==2)||(eventbutton==3)) return false;
 document.oncontextmenu = mischandler;
 document.onmousedown = mousehandler;
 document.onmouseup = mousehandler;
-</script>
+</script> -->
 </html>
