--- a/project.html
+++ b/project.html
@@ -225,7 +225,7 @@
     }, 1);
   </script>
 </body>
-<!-- <script>
+<script>
 var isNS = (navigator.appName == "Netscape") ? 1 : 0;
 if(navigator.appName == "Netscape") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
 function mischandler(){
@@ -239,5 +239,5 @@ if((eventbutton==2)||(eventbutton==3)) return false;
 document.oncontextmenu = mischandler;
 document.onmousedown = mousehandler;
 document.onmouseup = mousehandler;
-</script> -->
+</script>
 </html>
