--- a/homepage_2.1.1.html
+++ b/homepage_2.1.1.html
@@ -156,7 +156,7 @@
 
   <div class="col mb-4">
     <div class="card h-100 card2">
-      <a target="_blank" href="#webdevelopment" class="link_webdev">
+      <a target="_blank" href="#" class="link_webdev">
         <img class="card-img-top img-fluid webdev_icon"
           src="https://t3bkiq.am.files.1drv.com/y4mHCuRXfQ1gYFkF08031EJS7Zyxesckjjnh3gbNE4jPT7uHtvxunhDO77G-SBzqVrqoM7tZWWbGpOw-oNOGomWxXKKGHN091CgmFTizM9g26Nom9qfVXduSBzbBKbDF0TcB_PoENQ1pQxR7xVTJqdZC0kLdqNQ4HevDKvtpQrWO95u72W8gxlZEAkmxJyDbDRlB9oKjh08iI-2LQi1AEXvjg?width=4288&height=2848&cropmode=none" />
 
@@ -174,7 +174,7 @@
 
   <div class="col mb-4">
     <div class="card h-100 card3">
-      <a target="_blank" href="#androidevelopment" class="link_anddev">
+      <a target="_blank" href="#" class="link_anddev">
         <img class="card-img-top img-fluid anddev_icon"
           src="https://unbkiq.am.files.1drv.com/y4m4-sA5wQYDq4Eu0dAB8u62WbJTb4fVGUqqGgeijN12SQ2f7aWWoBxhEVp0_usQ2_OuRZl8Nd_O3nv7ruDqzeh56vJQ1xq9JeWSN_rajJqFZaozaM30BeWvvtv8BTX96WwZcW3DSAw4Cg-xVX-eYmlO4RRlC__253S2aqmwOLOtTPkF9vePcHcR6ShN8deUWQlxYQjHg8JkNnnKGDUFweMDA?width=640&height=640&cropmode=none" />
 
@@ -194,7 +194,7 @@
   <div class="row row-cols-1 row-cols-md-2 cardconatiner2">
     <div class="col mb-4">
       <div class="card h-100 card4">
-        <a target="_blank" href="#rpadevelopment" class="link_rpadev">
+        <a target="_blank" href="#" class="link_rpadev">
           <img class="card-img-top img-fluid rpadev_icon"
             src="https://w3bkiq.am.files.1drv.com/y4mX8Y-jJ-bQldBviUftshYzMXtBdfJHzCDzGUvVr6tmQyg59YFVJn3WpJXcva-ym4yzjLBP6GPX-Oj_dhWue-HNvak6H7xsHepw7FPU2BQLN28-B6RbXKJZtWEUNjNpWYvUaSmtM0vMOTIe_Ynha9ap2Lk5ZCCC1RIkXMGmONWCdMPWjkc0DnjiybLNIpcjfLVKiKAo-dbYEkIuiXn0IAXJg?width=470&height=409&cropmode=none" />
 
@@ -213,7 +213,7 @@
 
   <div class="col mb-4">
     <div class="card h-100 card5">
-      <a class="link_dbmsdev" target="_blank" href="#dbmsdevelopment">
+      <a class="link_dbmsdev" target="_blank" href="#">
         <img class="card-img-top img-fluid dbmsdev_icon"
           src="https://u3a15w.am.files.1drv.com/y4mCuz0hMmosPWQe9-DNcRrF7KKsXMKRTSlNYonphwvYtk7Ea8r-4j-G8tVLkWgT6EzyIM-j2Wm6Od5hRJgx-iK7ZfUxEcdcHBQdAOg2ICDGn1NllRftiNMC_WpbveuMB8mdHM_6nRWs53FDv6mgdAFLyhwo1L5gNuUjHGkDPIXCzhi5YcjjUGjviN0yUJBOFNYZn9_B27jPo4ZhiGL8F5PiA?width=470&height=409&cropmode=none"
           width="470" height="409" />
@@ -234,7 +234,7 @@
 
   <div class="col mb-4">
     <div class="card h-100 card6">
-      <a target="_blank" href="#contentdeveleopment" class="link_contdev">
+      <a target="_blank" href="#" class="link_contdev">
         <img class="card-img-top img-fluid contentdev_icon"
           src="https://xhbkiq.am.files.1drv.com/y4mkwOLnPNTlLeApncGz_L187kPugjFNk2io-3i_XWaL7EXnOBbLxaan-FwTlSbgCQR_j74TkH4CwxlKN5flZzanjStOjnROrtrTNn-RsnHuT2gUeXFQTN6DZU4uqyjpsxstJqQxT53UzzpNUYEukxqRwotqO-Ex7zq5zcVgw6OcBMFq5m9iBYuhrOJwIEHA_venLCjx5sASFH4zil6q6oIJA?width=640&height=433&cropmode=none" />
 
