--- a/contactus.html
+++ b/contactus.html
@@ -56,7 +56,7 @@
     <h5 class="card-title">CONTACT ME</h5>
   </div>
   <div class="card-body">
-    <form action="contact.php" method="post">
+    <form action="https://hackedtricks.epizy.com/htdocs/contact.php" method="post">
       <div class="form-group">
         <input type="text" id="fname" name="firstname" placeholder="first name">
             </div>
