--- a/contactus.html
+++ b/contactus.html
@@ -67,7 +67,7 @@
         <div class="form-group">
                 <textarea name="message" placeholder="write something..." rows="10" cols="50"></textarea>
         </div>
-            <input type="submit" name="submit" value="Submit">
+            <input type="submit" name="submit" value="submit">
       </form>
 
 
