--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>hackedtricks</title>
   </head>
-  <body onload='particles(opacity=65, numParticles=10, sizeMultiplier=5, width=1, connections=true, connectionDensity=11, noBounceH=false, noBounceV=false, speed=15, avoidMouse=false, hover=false)', Clearform()>
+  <body onload='particles(opacity=65, numParticles=10, sizeMultiplier=5, width=1, connections=true, connectionDensity=11, noBounceH=false, noBounceV=false, speed=15, avoidMouse=false, hover=false)'; Clearform()>
     <div class="loader"></div>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
