--- a/homepage_2.1.1.html
+++ b/homepage_2.1.1.html
@@ -98,7 +98,7 @@
 
       <div class="col-6">
         <img class="img-fluid myimage"
-          src="https://vhyhug.am.files.1drv.com/y4mzF_yBOn_pJ_ff1OQiu7bBmZ_P3Naudf9HydjR3m-YPJxlmGP6mx8yFOL7NXvZ-ZXDR5v5eX2u4N21rqc6rt2ObtpSKWR8RaJEuMdTlhMfqlLv36C69ULSICkAyyjvWmJ5baVcUgew20msJ5eEfnhzUyfH49NPTy-yk2dlKZ6Xlod-ltr3N-LER6V0GI1DxBOGUcvCbxi3BnvAgamf0kx1w?width=400&height=500&cropmode=none" />
+          src="https://onedrive.live.com/?view=8&photosData=%2Fphoto%2F442D635CE02D543B%212021%3Fview%3Dall" />
       </div>
 
       <div class="col-6">
