--- a/homepage_2.1.1.html
+++ b/homepage_2.1.1.html
@@ -98,7 +98,7 @@
 
       <div class="col-6">
         <img class="img-fluid myimage"
-          src="https://1drv.ms/i/c/442d635ce02d543b/IQA7VC3gXGMtIIBE5QcAAAAAARMgJt6fIMsIDvWSf4JssNQ?e=96aIxc" />
+          src="myimage.png" />
       </div>
 
       <div class="col-6">
