--- a/homepage_2.1.1.html
+++ b/homepage_2.1.1.html
@@ -98,7 +98,7 @@
 
       <div class="col-6">
         <img class="img-fluid myimage"
-          src="myimage.png" />
+          src="https://github.com/mani364/hackedtricks.github.io/blob/master/myimage.png" />
       </div>
 
       <div class="col-6">
